--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.3",
-    "expo-status-bar": "~1.11.1",
+    "@config-plugins/react-native-blob-util": "^6.0.0",
+    "@config-plugins/react-native-pdf": "^6.0.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "expo": "^49.0.0",
+    "expo-av": "~13.4.1",
+    "expo-camera": "~13.4.4",
+    "expo-dev-client": "~2.4.12",
+    "expo-document-picker": "~11.5.4",
+    "expo-linking": "~5.0.2",
+    "expo-media-library": "~15.4.1",
+    "expo-sharing": "~11.5.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.72.5",
+    "react-native-blob-util": "^0.19.6",
+    "react-native-pdf": "^6.7.4",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
